# xl_utils

./: LICENSE.txt  README.md  pyproject.toml
src/xl_utils/: __about__.py  __init__.py  funcs.py  utils.py
tests/: __init__.py
