[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xl-utils"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "LThomps", email = "luke.a.thompson3@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  'openpyxl',
  'pandas'
]

[project.urls]
Documentation = "https://github.com/LThomps/xl-utils#readme"
Issues = "https://github.com/LThomps/xl-utils/issues"
Source = "https://github.com/LThomps/xl-utils"

[tool.hatch.version]
path = "src/xl_utils/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/xl_utils tests}"

[tool.coverage.run]
source_pkgs = ["xl_utils", "tests"]
branch = true
parallel = true
omit = [
  "src/xl_utils/__about__.py",
]

[tool.coverage.paths]
xl_utils = ["src/xl_utils", "*/xl-utils/src/xl_utils"]
tests = ["tests", "*/xl-utils/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
